fix: add wildcard CORS for workers.dev